// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChangePassword <ChangePassword /> renders well 1`] = `
<Page
  className="change-password-page"
>
  <h1>
    Change password
  </h1>
  <ForwardRef(InternalForm)
    className="form change-password-page-form"
    fields={
      Array [
        Object {
          "name": Array [
            "password",
          ],
          "value": "",
        },
        Object {
          "name": Array [
            "confirm-password",
          ],
          "value": "",
        },
      ]
    }
    onFieldsChange={[Function]}
    onFinish={[Function]}
    size="large"
  >
    <FormItem
      className="form-item "
      name="password"
    >
      <Password
        action="click"
        className="form-item-input "
        name="password"
        onChange={[Function]}
        placeholder="Password"
        prefix={<ForwardRef(UnlockOutlined) />}
        visibilityToggle={true}
      />
    </FormItem>
    <p
      className="form-error"
    />
    <p
      className="form-error"
    />
    <FormItem
      className="form-item "
      name="confirmPassword"
    >
      <Password
        action="click"
        className="form-item-input "
        name="confirmPassword"
        onChange={[Function]}
        placeholder="Confirm password"
        prefix={<ForwardRef(UnlockOutlined) />}
        visibilityToggle={true}
      />
    </FormItem>
    <FormItem
      className="form-item"
    >
      <Button
        block={false}
        className="form-item-button change-password-page-form-submit"
        disabled={true}
        ghost={false}
        htmlType="submit"
        loading={false}
      >
        Update
      </Button>
    </FormItem>
  </ForwardRef(InternalForm)>
</Page>
`;

exports[`ChangePassword <ChangePassword /> renders well with errors 1`] = `
<Page
  className="change-password-page"
>
  <h1>
    Change password
  </h1>
  <ForwardRef(InternalForm)
    className="form change-password-page-form"
    fields={
      Array [
        Object {
          "name": Array [
            "password",
          ],
          "value": "",
        },
        Object {
          "name": Array [
            "confirm-password",
          ],
          "value": "",
        },
      ]
    }
    onFieldsChange={[Function]}
    onFinish={[Function]}
    size="large"
  >
    <FormItem
      className="form-item form-item-has-error"
      name="password"
    >
      <Password
        action="click"
        className="form-item-input form-item-input-has-error"
        name="password"
        onChange={[Function]}
        placeholder="Password"
        prefix={<ForwardRef(UnlockOutlined) />}
        visibilityToggle={true}
      />
    </FormItem>
    <p
      className="form-error"
    />
    <p
      className="form-error"
    >
      This value is too short. It should have 7 characters or more
    </p>
    <FormItem
      className="form-item form-item-has-error"
      name="confirmPassword"
    >
      <Password
        action="click"
        className="form-item-input form-item-input-has-error"
        name="confirmPassword"
        onChange={[Function]}
        placeholder="Confirm password"
        prefix={<ForwardRef(UnlockOutlined) />}
        visibilityToggle={true}
      />
    </FormItem>
    <FormItem
      className="form-item"
    >
      <Button
        block={false}
        className="form-item-button change-password-page-form-submit"
        disabled={true}
        ghost={false}
        htmlType="submit"
        loading={false}
      >
        Update
      </Button>
    </FormItem>
  </ForwardRef(InternalForm)>
</Page>
`;

exports[`ChangePassword <ConnectedChangePassword /> renders well 1`] = `
<ContextProvider
  value={null}
>
  <Component
    error={
      Object {
        "code": null,
        "errors": Object {
          "children": Object {
            "email": Object {},
            "firstName": Object {},
            "lastName": Object {},
            "password": Object {},
          },
        },
        "message": null,
      }
    }
    loading={false}
    onResetProfileFormInputError={[Function]}
    onUpdateProfile={[Function]}
    profile={null}
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
  />
</ContextProvider>
`;
